--- a/style.css
+++ b/style.css
@@ -1,6 +1,25 @@
 body {
-  margin: auto 0;
+  margin: 0 auto;
   font-size: 18px;
   max-width: 800px;
   min-width: 400px;
+  color: grey;
+}
+
+h1, .contact {
+  margin-bottom: 0px;
+  text-align: right;
+
+}
+
+a {
+  color: black;
+}
+
+
+h2, h3, b{
+  color: black;
+}
+i{
+  font-size: 14px;
 }
