--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+.clearfix::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+
 body {
   margin: 0 auto;
   font-size: 18px;
@@ -11,14 +17,19 @@ h1,
   margin-bottom: 0px;
   text-align: right;
 }
-
+.edu{
+  margin: 20px;
+  margin-bottom:40px;
+  float:left;
+}
 a {
   color: black;
 }
 
-.exp{
-  
-  float:left;
+.exp {
+  padding: 20px;
+  border: 1px solid gray;
+  border-radius: 60px;
 }
 
 h2,
@@ -26,6 +37,7 @@ h3,
 b {
   color: black;
 }
+
 i {
   font-size: 14px;
 }
