--- a/style.css
+++ b/style.css
@@ -17,19 +17,20 @@ h1,
   margin-bottom: 0px;
   text-align: right;
 }
-.edu{
+
+.edu {
   margin: 20px;
-  margin-bottom:40px;
-  float:left;
+  margin-bottom: 40px;
+  float: left;
+}
+.expert, .int{
+  margin:auto 0; 
+  padding-left: 20px;
+ 
+
 }
 a {
   color: black;
-}
-
-.exp {
-  padding: 20px;
-  border: 1px solid gray;
-  border-radius: 60px;
 }
 
 h2,
