--- a/style.css
+++ b/style.css
@@ -23,12 +23,15 @@ h1,
   margin-bottom: 40px;
   float: left;
 }
-.expert, .int{
-  margin:auto 0; 
-  padding-left: 20px;
- 
+
+.expert,
+.int {
+  margin: 30px,0;
+  padding: auto;
+  text-align: right;
 
 }
+
 a {
   color: black;
 }
@@ -37,8 +40,14 @@ h2,
 h3,
 b {
   color: black;
+  margin-top: 0;
+  padding-top: 0;
 }
 
 i {
   font-size: 14px;
+}
+.exp{
+  margin:20px;
+  
 }
