--- a/style.css
+++ b/style.css
@@ -9,19 +9,20 @@ body {
   font-size: 18px;
   max-width: 800px;
   min-width: 400px;
-  color: grey;
+  color: rgb(126, 126, 126);
+  background-color: rgb(238, 238, 238);
 }
 
 h2,
 h3,
 b {
-  color: black;
+  color: rgb(0, 0, 0);
   margin-top: 5%;
   padding-top: 0;
 }
 
 a {
-  color: black;
+  color: rgb(0, 0, 0);
 }
 
 i {
@@ -58,5 +59,4 @@ h1 {}
 
 .exp {
   margin: 20px;
-
 }
