--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ body {
   color: rgb(126, 126, 126);
   background-color: rgb(238, 238, 238);
   padding: 10%;
+display: inline-block;
 }
 
 h2,
@@ -35,22 +36,26 @@ p {
   margin-top: 0;
   margin-bottom: relative;
   padding-top: 0;
-  font-size: 14px;
+  font-size: 15px;
 }
 
 h1,
 .contact {
   text-align: right;
   margin: 0;
-
 }
 
 h1 {
   font-size: x-large;
+  color:rgb(0, 0, 0);
 }
 
 .edu {
   float: left;
+  border: 1px solid gray;
+  border-radius: 10%;
+  padding: 2%;
+  margin: 5%
 }
 
 .expert,
@@ -58,7 +63,6 @@ h1 {
   margin: 30px, 0;
   padding: auto;
   text-align: right;
-
 }
 
 .exp {
@@ -70,4 +74,7 @@ h1 {
 
 .exp {
   margin: 20px;
+}
+h1, h2, h3{
+  border-bottom: 1px solid gray;
 }
