--- a/style.css
+++ b/style.css
@@ -13,19 +13,18 @@ body {
   color: rgb(126, 126, 126);
   background-color: rgb(238, 238, 238);
   padding: 10%;
-display: inline-block;
 }
 
 h2,
 h3,
 b {
-  color: rgb(0, 0, 0);
+  color: rgb(61, 61, 61);
   margin-top: 5%;
   padding-top: 0;
 }
 
 a {
-  color: rgb(0, 0, 0);
+  color: rgb(26, 26, 26);
 }
 
 i {
@@ -47,7 +46,7 @@ h1,
 
 h1 {
   font-size: x-large;
-  color:rgb(0, 0, 0);
+  color: rgb(0, 0, 0);
 }
 
 .edu {
@@ -55,26 +54,22 @@ h1 {
   border: 1px solid gray;
   border-radius: 10%;
   padding: 2%;
-  margin: 5%
+  margin-right: 10%;
+  margin-bottom: 5%;
 }
 
 .expert,
 .int {
-  margin: 30px, 0;
+  margin: auto;
   padding: auto;
   text-align: right;
 }
 
-.exp {
-  margin-top: 15px;
+.int {
+  margin-bottom: 10%;
 }
 
-
-
-
-.exp {
-  margin: 20px;
-}
-h1, h2, h3{
-  border-bottom: 1px solid gray;
+h2,
+h3 {
+  font-size: 18px;
 }
