💠🍚 Checkpoint ./style.css:22573955/1171 ./index.html:22573955/213

--- a/style.css
+++ b/style.css
@@ -9,22 +9,28 @@ body {
   margin: 0 auto;
   font-size: 18px;
   max-width: 800px;
-  min-width: 400px;
+  min-width: 670px;
   color: rgb(126, 126, 126);
-  background-color: rgb(238, 238, 238);
+  background-color: rgb(207, 207, 207);
   padding: 10%;
+}
+
+.border {
+  background-color: rgb(255, 252, 248);
+  padding:10%;
+
 }
 
 h2,
 h3,
 b {
-  color: rgb(61, 61, 61);
+  color: rgb(90, 90, 90);
   margin-top: 5%;
   padding-top: 0;
 }
 
 a {
-  color: rgb(26, 26, 26);
+  color: rgb(90, 90, 90);
 }
 
 i {
@@ -45,8 +51,10 @@ h1,
 }
 
 h1 {
-  font-size: x-large;
-  color: rgb(0, 0, 0);
+  font-size:400%;
+  color: rgb(90, 90, 90);
+  align:center;
+  margin-bottom:2%
 }
 
 .edu {
