--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
 
 .border {
   background-color: rgb(255, 252, 248);
-  padding:10%;
+  padding: 10%;
 
 }
 
@@ -51,12 +51,14 @@ h1,
 }
 
 h1 {
-  font-size:400%;
+  font-size: 200%;
   color: rgb(90, 90, 90);
-  align:center;
-  margin-bottom:2%
+  text-align: right;
 }
-
+.contact{
+  border-bottom: 3px solid gray;
+  margin-top:
+}
 .edu {
   float: left;
   border: 1px solid gray;
