--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body {
 .border {
   background-color: rgb(255, 252, 248);
   padding: 10%;
-
+border: clear
 }
 
 h2,
@@ -55,10 +55,12 @@ h1 {
   color: rgb(90, 90, 90);
   text-align: right;
 }
-.contact{
-  border-bottom: 3px solid gray;
-  margin-top:
+
+.contact {
+  border-bottom: 1px solid gray;
+  margin-bottom: 5%;
 }
+
 .edu {
   float: left;
   border: 1px solid gray;
