--- a/style.css
+++ b/style.css
@@ -18,7 +18,8 @@ body {
 .border {
   background-color: rgb(255, 252, 248);
   padding: 10%;
-border: clear
+  border: 1px transparent;
+  border-radius: 100px;
 }
 
 h2,
